--- a/backend/public/books_display.css
+++ b/backend/public/books_display.css
@@ -98,3 +98,44 @@ background-image: url("full-bloom.webp");
 #book_image{
     height: 500px;
 }
+/* BOTTOM NAVIGATION BAR */
+#bottomNavBar{
+    border-radius:1rem;
+    width:60%;
+    background-color: rgba(128,128,128,0.4);
+    position:fixed;
+    bottom:5%;
+    left:20%;
+}
+#bottomNavBar a{
+    color:black;
+    text-decoration: none;
+    transition:linear;
+    transition-duration: 120ms;
+}
+#bottomNavBar a:hover{
+    transform: scale(1.05);
+}
+#uploadBookBtn{
+    border-radius: 0.5rem;
+    color: white !important;
+    background-color: rgb(52, 115, 231);
+}
+#currentPage{
+    color: rgb(52, 115, 231) !important;
+    background-color: rgba(209, 218, 236,0.8); 
+    padding:5px 20px; 
+    border-radius: 0.5rem;
+}
+@media (max-width: 768px) {
+    #bottomNavBar a span {
+        display: none;  /* hides text */
+    }
+
+    #bottomNavBar a {
+        padding: 0 !important; /* optional: makes icons closer */
+    }
+    #bottomNavBar .col-6:first-child {
+        justify-content: space-evenly;
+    }
+}
